<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/viewimg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gd1"
        android:padding="50dp"
        tools:ignore="ContentDescription" />
    <TextView
        android:id="@+id/txt01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt01"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold|normal"
        android:layout_marginBottom="33dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_alignBottom="@id/viewimg"/>
    <TextView
        android:id="@+id/txt02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt02"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        android:textStyle="italic"
        android:textSize="12sp"
        android:layout_alignBottom="@id/viewimg"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"/>
    <RelativeLayout
        android:id="@+id/lay2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/viewimg"
        android:background="@drawable/gradient"
        android:padding="10dp">

        <ImageView
            android:id="@+id/otpImg"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/otp_vector1"
            tools:ignore="ContentDescription" />
        <TextView
            android:id="@+id/txt00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="You are almost there!"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="normal|italic"
            android:textAllCaps="false"
            android:layout_centerInParent="true"
            android:layout_below="@id/otpImg"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            tools:ignore="HardcodedText" />
    <EditText
        android:id="@+id/otp"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:inputType="number"
        android:hint="@string/otp"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:background="@drawable/btn_shape1"
        android:layout_centerInParent="true"
        android:layout_marginBottom="25dp"
        android:gravity="center_horizontal"
        tools:ignore="Autofill,LabelFor"/>
    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:text="@string/loginBtnTxt"
        android:textColor="@android:color/white"
        android:textStyle="normal"
        android:background="@drawable/btn_shape1"
        android:textAllCaps="false"
        android:layout_below="@id/otp"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="25dp"/>
    </RelativeLayout>
</RelativeLayout>