<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:padding="40dp">
    <ImageView
        android:src="@drawable/img00"
        android:id="@+id/logo1"
        android:layout_width="wrap_content"
        android:layout_height="125dp"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="50dp"
        tools:ignore="ContentDescription"/>
    <TextView
        android:id="@+id/signInTxt"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:text="@string/signIn"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textAllCaps="false"
        android:textStyle="bold|normal"
        android:textAlignment="center"
        android:layout_below="@id/logo1"
        android:layout_centerInParent="true"
        android:layout_marginBottom="25dp"
        android:gravity="center_horizontal" />
    <TextView
        android:id="@+id/phnumTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phnumTxt"
        android:textColor="@android:color/white"
        android:textStyle="normal"
        android:textSize="12sp"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:layout_below="@id/signInTxt"
        android:layout_centerInParent="true"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal" />
    <EditText
        android:id="@+id/mobileNum"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@id/phnumTxt"
        android:layout_centerVertical="true"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/btn_shape1"
        android:gravity="center_horizontal"
        android:inputType="number|phone"
        android:maxLength="10"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:drawableLeft="@drawable/ic_phone_white_24dp"
        android:drawableStart="@drawable/ic_phone_white_24dp"
        android:padding="2dp"
        tools:ignore="Autofill,LabelFor"/>
    <Button
        android:clickable="true"
        android:id="@+id/contBtn"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/btn_shape1"
        android:text="@string/contTxt"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        android:layout_below="@id/mobileNum"
        android:layout_centerInParent="true"
        android:layout_marginBottom="10dp"
        android:focusable="true" />
</RelativeLayout>